--- a/src/main/resources/assets/changedplus/lang/zh_cn.json
+++ b/src/main/resources/assets/changedplus/lang/zh_cn.json
@@ -4,7 +4,10 @@
   "item.changedplus.latex": "混合胶液",
   "item.changedplus.latex_steak": "混合胶液棒",
   "item.changedplus.long_latex_steak": "长的混合胶液棒",
-  "item.changedplus.long_latex_steak.detailed_info": "给生物施加击退5和1分钟的缓慢5"
+  "item.changedplus.long_latex_steak.detailed_info": "给生物施加击退5和1分钟的缓慢5",
+  "message.welcome": "欢迎来到胶兽的世界! %s, 你准备好被兽化了吗？"
+
+
 
 
 
