--- a/src/main/resources/assets/changedplus/lang/en_us.json
+++ b/src/main/resources/assets/changedplus/lang/en_us.json
@@ -5,8 +5,12 @@
   "item.changedplus.latex_steak": "latex_steak",
   "item.changedplus.long_latex_steak": "long_latex_steak",
   "item.changedplus.long_latex_steak.detailed_info": "Apply knockback 5 and 1-minute slow 5 to creatures",
-  "message.welcome":"Welcome to the world of latexes! %s, are you ready to be bestialized?"
+  "item.changedplus.latex_sword.tooltip": "now damage: %s",
 
+  "message.welcome":"Welcome to the world of latexes! %s, are you ready to be transfured?",
+
+  "advancements.changedplus.root.title": "Welcome to changedplus",
+  "advancements.changedplus.root.description": "Thank you for installing this mod (not to be confused with the addon mod!!!)"
 
 
 
