--- a/src/main/resources/assets/changedplus/lang/en_us.json
+++ b/src/main/resources/assets/changedplus/lang/en_us.json
@@ -2,10 +2,11 @@
   "itemGroup.changedplus": "changed：plus",
   "item.changedplus.latex_sword": "latex_sword",
   "item.changedplus.latex": "latex",
-  "item.changedplus.latex_steak": "latex_steak",
-  "item.changedplus.long_latex_steak": "long_latex_steak",
-  "item.changedplus.long_latex_steak.detailed_info": "Apply knockback 5 and 1-minute slow 5 to creatures",
+  "item.changedplus.latex_stick": "latex_stick",
+  "item.changedplus.long_latex_stick": "long_latex_stick",
+  "item.changedplus.long_latex_stick.detailed_info": "Apply knockback 5 and 1-minute slow 5 to creatures",
   "item.changedplus.latex_sword.tooltip": "now damage: %s",
+  "item.changedplus.latex_sword.tooltip1": "now damage: %s",
 
   "message.welcome":"Welcome to the world of latexes! %s, are you ready to be transfured?",
 
