更新了加载文本

--- a/src/main/resources/assets/changedplus/lang/en_us.json
+++ b/src/main/resources/assets/changedplus/lang/en_us.json
@@ -2,11 +2,11 @@
   "Message.DoYouKnow.message.one": "Do you know?This is the first mod I've released",
   "Message.DoYouKnow.message.two": "Do you know?Although I was the one who made the mod, there is some code that was taught to me by someone else",
   "Message.DoYouKnow.message.three": "Do you know?The first mod I made was called the More Blood mod, but it wasn't released",
-  "Message.DoYouKnow.message.four": "Do you know?Not only do I make mod, but I also handcraft them. I'm the one who made the pre-module and addon.",
-  "Message.DoYouKnow.message.five": "Do you know?I'm good at Chinese translation, but I'm not good at writing code ......",
+  "Message.DoYouKnow.message.four": "Do you know?Not only do I make mod, but I also chinese translation them. I'm the one who made the pre-mod and addon.",
+  "Message.DoYouKnow.message.five": "Do you know?I'm good at chinese translation, but I'm not good at writing code ......",
   "Message.DoYouKnow.message.six": "Do you know?The author of the front mod is good at writing code, but not so good at translating ......",
   "Message.DoYouKnow.message.seven": "Do you know?In the changed, Puro learns the human language, but it's not clear if he can communicate with humans, but was able to communicate normally with the latexes using the language before, meaning that the latexes can use any language with the latexes!",
-  "Message.DoYouKnow.message.eight": "",
+  "Message.DoYouKnow.message.eight": "Do you know?In the changed, Puro learns the human language, but it's not clear if he can communicate with humans, but was able to communicate normally with the latexes using the language before, meaning that the latexes can use any language with the latexes!",
   "Message.DoYouKnow.message.nine": "",
   "Message.DoYouKnow.message.ten": "",
 
