--- a/src/main/resources/assets/changedplus/lang/zh_cn.json
+++ b/src/main/resources/assets/changedplus/lang/zh_cn.json
@@ -5,8 +5,8 @@
   "Message.DoYouKnow.message.four": "你知道吗？我不仅会制作模组，而且我还会汉化。前置模组和addon就是我汉化的",
   "Message.DoYouKnow.message.five": "你知道吗？我擅长对模组的汉化，但是我不擅长写代码......",
   "Message.DoYouKnow.message.six": "你知道吗？前置模组的作者擅长写代码，但是不怎么擅长翻译......",
-  "Message.DoYouKnow.message.seven": "你知道吗？在原作里，普罗学习了人类的语言，但是不知道是否能和人类交流，但是在之前能和胶兽使用语言正常交流，也就是说胶兽和胶兽之间可以使用任何语言！",
-  "Message.DoYouKnow.message.eight": "",
+  "Message.DoYouKnow.message.seven": "你知道吗？在原作里，普罗学习了人类的语言，但是不知道是否能和人类交流",
+  "Message.DoYouKnow.message.eight": "你知道吗？在原作里，胶兽和胶兽之间可以听懂任何语言",
   "Message.DoYouKnow.message.nine": "",
   "Message.DoYouKnow.message.ten": "",
 
