--- a/src/main/resources/assets/changedplus/lang/en_us.json
+++ b/src/main/resources/assets/changedplus/lang/en_us.json
@@ -7,8 +7,48 @@
   "Message.DoYouKnow.message.six": "Do you know?The author of the front mod is good at writing code, but not so good at translating ......",
   "Message.DoYouKnow.message.seven": "Do you know?In the changed, Puro learns the human language, but it's not clear if he can communicate with humans, but was able to communicate normally with the latexes using the language before, meaning that the latexes can use any language with the latexes!",
   "Message.DoYouKnow.message.eight": "Do you know?In the changed, Puro learns the human language, but it's not clear if he can communicate with humans, but was able to communicate normally with the latexes using the language before, meaning that the latexes can use any language with the latexes!",
-  "Message.DoYouKnow.message.nine": "",
-  "Message.DoYouKnow.message.ten": "",
+  "Message.DoYouKnow.message.nine": "Do you know?This is the first mod I've released",
+  "Message.DoYouKnow.message.ten": "Do you know?Although I was the one who made the mod, there is some code that was taught to me by someone else",
+  "Message.DoYouKnow.message.eleven": "",
+  "Message.DoYouKnow.message.twelve": "",
+  "Message.DoYouKnow.message.thirteen": "",
+  "Message.DoYouKnow.message.fourteen": "",
+  "Message.DoYouKnow.message.fifteen": "",
+  "Message.DoYouKnow.message.sixteen": "",
+  "Message.DoYouKnow.message.seventeen": "",
+  "Message.DoYouKnow.message.eighteen": "",
+  "Message.DoYouKnow.message.nineteen": "",
+  "Message.DoYouKnow.message.twenty": "",
+  "Message.DoYouKnow.message.twentyone": "",
+  "Message.DoYouKnow.message.twentytwo": "",
+  "Message.DoYouKnow.message.twentythree": "",
+  "Message.DoYouKnow.message.twentyfour": "",
+  "Message.DoYouKnow.message.twentyfive": "",
+  "Message.DoYouKnow.message.twentysix": "",
+  "Message.DoYouKnow.message.twentyseven": "",
+  "Message.DoYouKnow.message.twentyeight": "",
+  "Message.DoYouKnow.message.twentynine": "",
+  "Message.DoYouKnow.message.thirty": "",
+  "Message.DoYouKnow.message.thirtyone": "",
+  "Message.DoYouKnow.message.thirtytwo": "",
+  "Message.DoYouKnow.message.thirtythree": "",
+  "Message.DoYouKnow.message.thirtyfour": "",
+  "Message.DoYouKnow.message.thirtyfive": "",
+  "Message.DoYouKnow.message.thirtysix": "",
+  "Message.DoYouKnow.message.thirtyseven": "",
+  "Message.DoYouKnow.message.thirtyeight": "",
+  "Message.DoYouKnow.message.thirtynine": "",
+  "Message.DoYouKnow.message.forty": "",
+  "Message.DoYouKnow.message.fortyone": "",
+  "Message.DoYouKnow.message.fortytwo": "",
+  "Message.DoYouKnow.message.fortythree": "",
+  "Message.DoYouKnow.message.fortyfour": "",
+  "Message.DoYouKnow.message.fortyfive": "",
+  "Message.DoYouKnow.message.fortysix": "",
+  "Message.DoYouKnow.message.fortyseven": "",
+  "Message.DoYouKnow.message.fortyeight": "",
+  "Message.DoYouKnow.message.fortynine": "",
+  "Message.DoYouKnow.message.fifty": "",
   "Message.HappyBirthday!" : "Happy Birthday! gengyoubo",
 
   "itemGroup.changedplus": "changed：plus",
