--- a/src/main/resources/assets/changedplus/lang/zh_cn.json
+++ b/src/main/resources/assets/changedplus/lang/zh_cn.json
@@ -7,8 +7,48 @@
   "Message.DoYouKnow.message.six": "你知道吗？前置模组的作者擅长写代码，但是不怎么擅长翻译......",
   "Message.DoYouKnow.message.seven": "你知道吗？在原作里，普罗学习了人类的语言，但是不知道是否能和人类交流",
   "Message.DoYouKnow.message.eight": "你知道吗？在原作里，胶兽和胶兽之间可以听懂任何语言",
-  "Message.DoYouKnow.message.nine": "",
-  "Message.DoYouKnow.message.ten": "",
+  "Message.DoYouKnow.message.nine": "耿悠博是这样的，玩家只要好好体验模组而已，但是耿悠博需要考虑的就多了！",
+  "Message.DoYouKnow.message.ten": "一刻也没有为耿悠博的牺牲感到悲伤，接下来赶到的是耿悠博！",
+  "Message.DoYouKnow.message.eleven": "",
+  "Message.DoYouKnow.message.twelve": "",
+  "Message.DoYouKnow.message.thirteen": "",
+  "Message.DoYouKnow.message.fourteen": "",
+  "Message.DoYouKnow.message.fifteen": "",
+  "Message.DoYouKnow.message.sixteen": "",
+  "Message.DoYouKnow.message.seventeen": "",
+  "Message.DoYouKnow.message.eighteen": "",
+  "Message.DoYouKnow.message.nineteen": "",
+  "Message.DoYouKnow.message.twenty": "",
+  "Message.DoYouKnow.message.twentyone": "",
+  "Message.DoYouKnow.message.twentytwo": "",
+  "Message.DoYouKnow.message.twentythree": "",
+  "Message.DoYouKnow.message.twentyfour": "",
+  "Message.DoYouKnow.message.twentyfive": "",
+  "Message.DoYouKnow.message.twentysix": "",
+  "Message.DoYouKnow.message.twentyseven": "",
+  "Message.DoYouKnow.message.twentyeight": "",
+  "Message.DoYouKnow.message.twentynine": "",
+  "Message.DoYouKnow.message.thirty": "",
+  "Message.DoYouKnow.message.thirtyone": "",
+  "Message.DoYouKnow.message.thirtytwo": "",
+  "Message.DoYouKnow.message.thirtythree": "",
+  "Message.DoYouKnow.message.thirtyfour": "",
+  "Message.DoYouKnow.message.thirtyfive": "",
+  "Message.DoYouKnow.message.thirtysix": "",
+  "Message.DoYouKnow.message.thirtyseven": "",
+  "Message.DoYouKnow.message.thirtyeight": "",
+  "Message.DoYouKnow.message.thirtynine": "",
+  "Message.DoYouKnow.message.forty": "",
+  "Message.DoYouKnow.message.fortyone": "",
+  "Message.DoYouKnow.message.fortytwo": "",
+  "Message.DoYouKnow.message.fortythree": "",
+  "Message.DoYouKnow.message.fortyfour": "",
+  "Message.DoYouKnow.message.fortyfive": "",
+  "Message.DoYouKnow.message.fortysix": "",
+  "Message.DoYouKnow.message.fortyseven": "",
+  "Message.DoYouKnow.message.fortyeight": "",
+  "Message.DoYouKnow.message.fortynine": "",
+  "Message.DoYouKnow.message.fifty": "",
   "Message.HappyBirthday!" : "生日快乐！耿悠博！",
 
   "itemGroup.changedplus": "胶兽实验室：附加",
